--- a/index.html
+++ b/index.html
@@ -1,59 +1,80 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500&family=Poppins:wght@400;500;600&family=Ubuntu:ital,wght@0,300;0,400;1,300;1,500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500&family=Poppins:wght@400;500;600&family=Ubuntu:ital,wght@0,300;0,400;1,300;1,500&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <title>API de Clima</title>
 </head>
+
 <body>
     <div class="container">
-        <div class="form">
+        <div class="form"><!-- DIV FORM COMEÇA AQUI -->
             <h3>Pesquise o clima de uma cidade:</h3>
-
-            <div class="form-input-container">
+            <div class="form-input-container"><!-- DIV form-input-container COMEÇA AQUI -->
                 <input type="text" placeholder="Digite o nome da cidade" id="city-input">
                 <button id="search">
-                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <i class="fas fa-search"></i>
                 </button>
-            </div>
+            </div><!-- DIV form-input-container TERMINA AQUI -->
+        </div><!-- DIV FORM TERMINA AQUI -->
 
-        </div>
-
-        <div class="weather-data">
+        <!--encontrei um error aqui, o estava como classe sendo que era pra esta como id.
+        acabei de corrigilo-->
+        <div id="weather-data" class="hide"><!-- DIV WEATHER-DATA COMEÇA AQUI -->
             <h2>
-                <i class="fa-solid fa-location-dot"></i>
-                <span id="city">Cachoeira Grande</span>
-                <img src="https://flagsapi.com/BE/flat/64.png" alt="Bandeira do país" id="country">
+                <i class="fas fa-location-dot"></i>
+                <span id="city"></span>
+                <img src="" alt="Bandeira do país" id="country">
             </h2>
 
-            <p id="temperature"><span>30</span>&deg;C</p>
+            <p id="temperature"><span></span>&deg;C</p>
 
-            <div id="description-conatiner">
-                <p id="description">Nublado</p>
-                <img src="http://openweathermap.org/img/wn/01d.png" alt="Condições do tempo" id="weather-icon">
-            </div>
+            <div id="description-container"><!-- DIV description-container COMEÇA AQUI -->
+                <p id="description"></p>
+                <img src="" alt="Condições do tempo" id="weather-icon">
+            </div><!-- DIV description-container TERMINA AQUI -->
 
-            <div id="details-container">
-                <p id="umidity">
-                    <i class="fa-solid fa-droplet"></i>
-                    <span>30%</span>
+            <div id="details-container"><!-- DIV details-container COMEÇA AQUI -->
+                <p id="humidity">
+                    <i class="fas fa-tint"></i>
+                    <span></span>
                 </p>
-
                 <p id="wind">
-                    <i class="fa-solid fa-wind"></i>
-                    <span>12km/h</span>
-                </p> 
-            </div>
+                    <i class="fas fa-wind"></i>
+                    <span></span>
+                </p>
+            </div><!-- DIV details-container TERMINA AQUI -->
+        </div><!-- DIV WEATHER-DATA TERMINA AQUI -->
 
+        <div id="error-message" class="hide">
+            <p>Ops! Não existe um clima de uma cidade com este nome.</p>
         </div>
-        
+        <div id="loader" class="hide">
+            <i class="fa-solid fa-spinner"></i>
+        </div>
+        <div id="suggestions">
+            <button id="viena">Viena</button>
+            <button id="copenhague">Copenhague</button>
+            <button id="zurique">Zurique</button>
+            <button id="vancouver">Vancouver</button>
+            <button id="genebra">Genebra</button>
+            <button id="frankfurt">Frankfurt</button>
+            <button id="osaka">Osaka</button>
+            <button id="maceio">Maceió</button>
+        </div>
     </div>
 </body>
+
 </html>
